--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "compile-server-watch": "tsc --project ./backend/ -w",
     "compile-client": "tsc --project ./frontend/",
     "compile-client-watch": "tsc --project ./frontend/ -w",
-    "serve" : "node ./serve.js"
+    "serve": "node ./serve.js",
+    "start-terminal": "node ./backend/out/TerminalWs.js"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
   },
   "homepage": "https://github.com/akrck02/GTD_Framework#readme",
   "devDependencies": {
+    "@types/node": "^18.0.3",
     "rollup": "^2.70.1",
     "typescript": "^4.5.2"
   },
