--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "dotenv": "^16.0.1",
-    "live-server": "^1.1.0"
+    "live-server": "^1.1.0",
+    "ws": "^8.8.0"
   }
 }
